Alignment issue fix

--- a/alternative-style.css
+++ b/alternative-style.css
@@ -444,10 +444,14 @@ header {
     text-align: center;
     list-style: none;
     
-    aspect-ratio: 1.5/1;
-    width: 200px;
-    max-width: 50vw;
+    aspect-ratio: 1.2/1;
+    width: 400px;
+    max-width: 80vw;
     height: auto;
+
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 
 }
 
